--- a/index.html
+++ b/index.html
@@ -90,31 +90,27 @@ amp-carousel{
     outline:none;
 }
 .amp-carousel-button-prev {
-  left: 0px;
-  border-right:.5px dotted #090909;
-}
-.amp-carousel-button-prev:hover, .amp-carousel-button-prev:active,{
-  border:none;
+  left: 16px;
 }
 .amp-carousel-button-next {
-  right: 0px;
-  border-left:.5px dotted #090909;
-}
-.amp-carousel-button-next:hover, .amp-carousel-button-next:active,{
-  border:none;
+  right: 16px;
 }
 .amp-carousel-button{
-  height:66vh;
-  width:12vw;
+  height:3vw;
+  width:1vw;
   min-width:36px;
-  top:50vh;
+  top:16px;
+  margin-top:1.5vw;
   background:none;
   outline:none;
   z-index:9;
+  background:#090909;
+  box-shadow: 0px 0px 1.5px #090909,0px 0px .5px #090909;
 }
 .amp-carousel-button:hover, .amp-carousel-button:active{
   cursor: pointer;
-  background:#090909;
+  background:#eee;
+  box-shadow: 0px 0px 1.5px #eee,0px 0px .5px #eee;
 }
 button{
   font-family: 'Egyptian', sans-serif;
