--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <script async src="https://cdn.ampproject.org/v0.js"></script>
-  <title>&lrm;</title>
+  <title>Mark Keller Architecture</title>
   <link rel="canonical" href="http://mwkeller.com/index.html">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=3">
