--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
   <meta charset="utf-8">
   <script async src="https://cdn.ampproject.org/v0.js"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113581659-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-113581659-1');
+  </script>
   <title>Mark Keller Architecture</title>
   <link rel="canonical" href="http://mwkeller.com/index.html">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
