--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
    	  "latitude": "47.551978",
     	"longitude": "-122.389099"
  		},
-    "image":"http://mwkeller.com/img/01-800.jpg",
+    "image":"http://mwkeller.com/img/01-400.jpg",
     "priceRange":"$$"
   }</script>
   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
@@ -216,8 +216,8 @@ p{
     controls><a>
       <div class="fixed-container">
         <amp-img class="cover"
-        src="img/01-800.jpg"
-        srcset="img/01-1600.jpg 1600w, img/01-800.jpg 800w"
+        src="img/01-400.jpg"
+        srcset="img/01-2000.jpg 2000w, img/01-1600.jpg 1600w, img/01-1200.jpg 1200w, img/01-800.jpg 800w"
         sizes = "100vw"
         layout="fill"
         alt="View from site."></amp-img>
@@ -225,8 +225,8 @@ p{
     </a><a>
       <div class="fixed-container">
         <amp-img class="cover"
-        src="img/02-800.jpg"
-        srcset="img/02-1600.jpg 1600w, img/02-800.jpg 800w"
+        src="img/02-400.jpg"
+        srcset="img/02-2000.jpg 2000w, img/02-1600.jpg 1600w, img/02-1200.jpg 1200w, img/02-800.jpg 800w"
         sizes = "100vw"
         layout="fill"
         alt="View from site."></amp-img>
@@ -234,8 +234,8 @@ p{
     </a><a>
       <div class="fixed-container">
         <amp-img class="cover"
-        src="img/03-800.jpg"
-        srcset="img/03-1600.jpg 1600w, img/03-800.jpg 800w"
+        src="img/03-400.jpg"
+        srcset="img/03-2000.jpg 2000w, img/03-1600.jpg 1600w, img/03-1200.jpg 1200w, img/03-800.jpg 800w"
         sizes = "100vw"
         layout="fill"
         alt="View from site."></amp-img>
@@ -243,8 +243,8 @@ p{
     </a><a>
       <div class="fixed-container">
         <amp-img class="cover"
-        src="img/04-800.jpg"
-        srcset="img/04-1600.jpg 1600w, img/04-800.jpg 800w"
+        src="img/04-400.jpg"
+        srcset="img/04-2000.jpg 2000w, img/04-1600.jpg 1600w, img/04-1200.jpg 1200w, img/04-800.jpg 800w"
         sizes = "100vw"
         layout="fill"
         alt="View from site."></amp-img>
@@ -252,8 +252,8 @@ p{
     </a><a>
       <div class="fixed-container">
         <amp-img class="cover"
-        src="img/05-800.jpg"
-        srcset="img/05-1600.jpg 1600w, img/05-800.jpg 800w"
+        src="img/05-400.jpg"
+        srcset="img/05-2000.jpg 2000w, img/05-1600.jpg 1600w, img/05-1200.jpg 1200w, img/05-800.jpg 800w"
         sizes = "100vw"
         layout="fill"
         alt="View from site."></amp-img>
@@ -261,8 +261,8 @@ p{
     </a><a>
       <div class="fixed-container">
         <amp-img class="cover"
-        src="img/06-800.jpg"
-        srcset="img/06-1600.jpg 1600w, img/06-800.jpg 800w"
+        src="img/06-400.jpg"
+        srcset="img/06-2000.jpg 2000w, img/06-1600.jpg 1600w, img/06-1200.jpg 1200w, img/06-800.jpg 800w"
         sizes = "100vw"
         layout="fill"
         alt="View from site."></amp-img>
@@ -270,8 +270,8 @@ p{
     </a><a>
       <div class="fixed-container">
         <amp-img class="cover"
-        src="img/07-800.jpg"
-        srcset="img/07-1600.jpg 1600w, img/07-800.jpg 800w"
+        src="img/07-400.jpg"
+        srcset="img/07-2000.jpg 2000w, img/07-1600.jpg 1600w, img/07-1200.jpg 1200w, img/07-800.jpg 800w"
         sizes = "100vw"
         layout="fill"
         alt="View from site."></amp-img>
@@ -279,8 +279,8 @@ p{
     </a><a>
       <div class="fixed-container">
         <amp-img class="cover"
-        src="img/08-800.jpg"
-        srcset="img/08-1600.jpg 1600w, img/08-800.jpg 800w"
+        src="img/08-400.jpg"
+        srcset="img/08-2000.jpg 2000w, img/08-1600.jpg 1600w, img/08-1200.jpg 1200w, img/08-800.jpg 800w"
         sizes = "100vw"
         layout="fill"
         alt="View from site."></amp-img>
@@ -288,8 +288,8 @@ p{
     </a><a>
       <div class="fixed-container">
         <amp-img class="cover"
-        src="img/09-800.jpg"
-        srcset="img/09-1600.jpg 1600w, img/09-800.jpg 800w"
+        src="img/09-400.jpg"
+        srcset="img/09-2000.jpg 2000w, img/09-1600.jpg 1600w, img/09-1200.jpg 1200w, img/09-800.jpg 800w"
         sizes = "100vw"
         layout="fill"
         alt="View from site."></amp-img>
@@ -297,8 +297,8 @@ p{
     </a><a>
       <div class="fixed-container">
         <amp-img class="cover"
-        src="img/10-800.jpg"
-        srcset="img/10-1600.jpg 1600w, img/10-800.jpg 800w"
+        src="img/10-400.jpg"
+        srcset="img/10-2000.jpg 2000w, img/10-1600.jpg 1600w, img/10-1200.jpg 1200w, img/10-800.jpg 800w"
         sizes = "100vw"
         layout="fill"
         alt="View from site."></amp-img>
@@ -306,8 +306,8 @@ p{
     </a><a>
       <div class="fixed-container">
         <amp-img class="cover"
-        src="img/11-800.jpg"
-        srcset="img/11-1600.jpg 1600w, img/11-800.jpg 800w"
+        src="img/11-400.jpg"
+        srcset="img/11-2000.jpg 2000w, img/11-1600.jpg 1600w, img/11-1200.jpg 1200w, img/11-800.jpg 800w"
         sizes = "100vw"
         layout="fill"
         alt="View from site."></amp-img>
@@ -315,71 +315,8 @@ p{
     </a><a>
       <div class="fixed-container">
         <amp-img class="cover"
-        src="img/12-800.jpg"
-        srcset="img/12-1600.jpg 1600w, img/12-800.jpg 800w"
-        sizes = "100vw"
-        layout="fill"
-        alt="View from site."></amp-img>
-      </div>
-    </a><a>
-      <div class="fixed-container">
-        <amp-img class="cover"
-        src="img/13-800.jpg"
-        srcset="img/13-1600.jpg 1600w, img/13-800.jpg 800w"
-        sizes = "100vw"
-        layout="fill"
-        alt="View from site."></amp-img>
-      </div>
-    </a><a>
-      <div class="fixed-container">
-        <amp-img class="cover"
-        src="img/16-800.jpg"
-        srcset="img/16-1600.jpg 1600w, img/16-800.jpg 800w"
-        sizes = "100vw"
-        layout="fill"
-        alt="View from site."></amp-img>
-      </div>
-    </a><a>
-      <div class="fixed-container">
-        <amp-img class="cover"
-        src="img/17-800.jpg"
-        srcset="img/17-1600.jpg 1600w, img/17-800.jpg 800w"
-        sizes = "100vw"
-        layout="fill"
-        alt="View from site."></amp-img>
-      </div>
-    </a><a>
-      <div class="fixed-container">
-        <amp-img class="cover"
-        src="img/18-800.jpg"
-        srcset="img/18-1600.jpg 1600w, img/18-800.jpg 800w"
-        sizes = "100vw"
-        layout="fill"
-        alt="View from site."></amp-img>
-      </div>
-    </a><a>
-      <div class="fixed-container">
-        <amp-img class="cover"
-        src="img/19-800.jpg"
-        srcset="img/19-1600.jpg 1600w, img/19-800.jpg 800w"
-        sizes = "100vw"
-        layout="fill"
-        alt="View from site."></amp-img>
-      </div>
-    </a><a>
-      <div class="fixed-container">
-        <amp-img class="cover"
-        src="img/20-800.jpg"
-        srcset="img/20-1600.jpg 1600w, img/20-800.jpg 800w"
-        sizes = "100vw"
-        layout="fill"
-        alt="View from site."></amp-img>
-      </div>
-    </a><a>
-      <div class="fixed-container">
-        <amp-img class="cover"
-        src="img/21-800.jpg"
-        srcset="img/21-1600.jpg 1600w, img/21-800.jpg 800w"
+        src="img/12-400.jpg"
+        srcset="img/12-2000.jpg 2000w, img/12-1600.jpg 1600w, img/12-1200.jpg 1200w, img/12-800.jpg 800w"
         sizes = "100vw"
         layout="fill"
         alt="View from site."></amp-img>
