--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     gtag('config', 'UA-113581659-1');
   </script>
   <title>Mark Keller Architecture</title>
-  <link rel="canonical" href="http://mwkeller.com/index.html">
+  <link rel="canonical" href="http://bad.house/index.html">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=3">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=3">
@@ -33,14 +33,14 @@
     },
     "name": "Mark Keller",
     "telephone": "434 218 2207",
-    "url": "http://www.mwkeller.com",
-    "email":"mailto:mark@mwkeller.com",
+    "url": "http://www.bad.house",
+    "email":"mailto:mark@bad.house",
     "geo": {
     	"@type": "GeoCoordinates",
    	  "latitude": "47.551978",
     	"longitude": "-122.389099"
  		},
-    "image":"http://mwkeller.com/img/01-400.jpg",
+    "image":"http://bad.house/img/01-400.jpg",
     "priceRange":"$$"
   }</script>
   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
@@ -194,7 +194,7 @@ p{
         </button>
     </div>
     <div class="information">
-<p>Architecture by Mark Keller<br><br><br><a href="mailto:mark@mwkeller.com" target="_blank">mark@mwkeller.com</a><br><br>434 218 2207<br><a href="https://goo.gl/maps/DH6Enr7sGeE2" target="_blank">4409 SW Findlay St<br>Seattle, WA 98136</a></p>
+<p>Architecture by Mark Keller<br><br><br><a href="mailto:mark@bad.house" target="_blank">mark@bad.house</a><br><br>434 218 2207<br><a href="https://goo.gl/maps/DH6Enr7sGeE2" target="_blank">4409 SW Findlay St<br>Seattle, WA 98136</a></p>
 </div>
     </div>
   </amp-lightbox>
