--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
       "postalCode": "98136",
       "streetAddress": "4409 SW Findlay St"
     },
-    "name": "Mark Keller",
+    "name": "Bad House",
     "telephone": "434 218 2207",
     "url": "http://www.bad.house",
-    "email":"mailto:mark@bad.house",
+    "email":"mailto:infok@bad.house",
     "geo": {
     	"@type": "GeoCoordinates",
    	  "latitude": "47.551978",
@@ -194,7 +194,7 @@ p{
         </button>
     </div>
     <div class="information">
-<p>Architecture by Mark Keller<br><br><br><a href="mailto:mark@bad.house" target="_blank">mark@bad.house</a><br><br>434 218 2207<br><a href="https://goo.gl/maps/DH6Enr7sGeE2" target="_blank">4409 SW Findlay St<br>Seattle, WA 98136</a></p>
+<p>Architecture by Bad House<br><br><br><a href="mailto:info@bad.house" target="_blank">info@bad.house</a><br><br>434 218 2207<br><a href="https://goo.gl/maps/DH6Enr7sGeE2" target="_blank">4409 SW Findlay St<br>Seattle, WA 98136</a></p>
 </div>
     </div>
   </amp-lightbox>
