--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       "postalCode": "98136",
       "streetAddress": "4409 SW Findlay St"
     },
-    "name": "Bad House",
+    "name": "Badhouse",
     "telephone": "434 218 2207",
     "url": "http://www.bad.house",
     "email":"mailto:infok@bad.house",
@@ -194,7 +194,7 @@ p{
         </button>
     </div>
     <div class="information">
-<p>Architecture by Bad House<br><br><br><a href="mailto:info@bad.house" target="_blank">info@bad.house</a><br><br>434 218 2207<br><a href="https://goo.gl/maps/DH6Enr7sGeE2" target="_blank">4409 SW Findlay St<br>Seattle, WA 98136</a></p>
+<p>Architecture by Badhouse<br><br><br><a href="mailto:info@bad.house" target="_blank">info@bad.house</a><br><br>434 218 2207<br><a href="https://goo.gl/maps/DH6Enr7sGeE2" target="_blank">4409 SW Findlay St<br>Seattle, WA 98136</a></p>
 </div>
     </div>
   </amp-lightbox>
