--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     gtag('config', 'UA-113581659-1');
   </script>
   <title>Mark Keller Architecture</title>
-  <link rel="canonical" href="http://bad.house/index.html">
+  <link rel="canonical" href="http://mwkeller.com/index.html">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=3">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=3">
@@ -31,10 +31,10 @@
       "postalCode": "98136",
       "streetAddress": "4409 SW Findlay St"
     },
-    "name": "Badhouse",
+    "name": "MWKeller",
     "telephone": "434 218 2207",
-    "url": "http://www.bad.house",
-    "email":"mailto:infok@bad.house",
+    "url": "http://www.mwkeller.com",
+    "email":"mailto:mark@mwkeller.com",
     "geo": {
     	"@type": "GeoCoordinates",
    	  "latitude": "47.551978",
@@ -194,7 +194,7 @@ p{
         </button>
     </div>
     <div class="information">
-<p>Architecture by Badhouse<br><br><br><a href="mailto:info@bad.house" target="_blank">info@bad.house</a><br><br>434 218 2207<br><a href="https://goo.gl/maps/DH6Enr7sGeE2" target="_blank">4409 SW Findlay St<br>Seattle, WA 98136</a></p>
+<p>Architecture by Mark Keller<br><br><br><a href="mailto:mark@mwkeller.com" target="_blank">mark@mwkeller.com</a><br><br>434 218 2207<br><a href="https://goo.gl/maps/DH6Enr7sGeE2" target="_blank">4409 SW Findlay St<br>Seattle, WA 98136</a></p>
 </div>
     </div>
   </amp-lightbox>
